# Price-Predictor

./: .gitignore  METHODOLOGY.md  MODEL_DOCUMENTATION.md  README.md  pyproject.toml
config/: paths.yml
scripts/: eval_bert.py  predict_bert.py  train_bert.py
src/master/data/: __init__.py  dataset.py
src/master/ensemble/: __init__.py  average.py
src/master/models/: __init__.py  bert_regressor.py
src/master/utils/: __init__.py  config_loader.py  training.py
